welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:11: error: not found: value geuche
	gauche();avance();droite();avance(8);gauche();recule();droite();ensemble();gauche();avance(2);droite();recule(2);fleur(Color.BLUE);recule(6);geuche();avance(2);ensemble();
                                                                                                                                                     ^